@@ -13,14 +13,20 @@ import com.vky.repository.entity.ChatMessage;
 import com.vky.repository.entity.ChatRoom;
 import com.vky.repository.entity.UserChatSettings;
 import lombok.RequiredArgsConstructor;
+import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.messaging.simp.SimpMessagingTemplate;
+import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
+import org.springframework.web.reactive.function.client.WebClient;
+import org.springframework.web.reactive.function.client.WebClientResponseException;
+import reactor.core.publisher.Mono;
 
 import java.time.Instant;
 import java.util.*;
+import java.util.concurrent.CompletableFuture;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -36,6 +42,7 @@ public class ChatRoomService {
     private final RabbitMQProducer rabbitMQProducer;
     private final RabbitMQConsumer rabbitMQConsumer;
     private final SimpMessagingTemplate messagingTemplate;
+    private final WebClient webClient;
 
     public ChatRoom chatRoomSave(String userId, String friendId) {
         List<String> participantIds = new ArrayList<>();
@@ -44,49 +51,6 @@ public class ChatRoomService {
         return this.chatRoomRepository.save(ChatRoom.builder().participantIds(new ArrayList<>(participantIds)).build());
     }
 
-    public List<ChatRoomResponseDTO> getChatList(String userId) {
-        List<ChatRoom> chatRooms = this.chatRoomRepository.findByParticipantIdsContaining(userId);
-        List<ChatRoomResponseDTO> chatRoomResponseDTOs = new ArrayList<>();
-
-        for (ChatRoom chatRoom : chatRooms) {
-            List<String> filteredParticipantIds = chatRoom.getParticipantIds()
-                    .stream()
-                    .filter(id -> !id.equals(userId))
-                    .toList();
-
-            String friendId = filteredParticipantIds.isEmpty() ? null : filteredParticipantIds.get(0);
-
-            List<ChatMessage> messages = chatMessageService.getChatMessages(chatRoom.getId());
-            List<ChatRoomMessageResponseDTO> messageDTOs = messages.stream()
-                    .map(IChatMapper.INSTANCE::chatMessageToDTO)
-                    .collect(Collectors.toList());
-            ChatRoomResponseDTO chatRoomDTO = ChatRoomResponseDTO.builder().messages(messageDTOs).userId(userId).friendId(friendId).id(chatRoom.getId()).build();
-
-            String friendEmail = this.userManager.getUserEmailById(UUID.fromString(friendId));
-            chatRoomDTO.setFriendEmail(friendEmail);
-            chatRoomResponseDTOs.add(chatRoomDTO);
-        }
-
-        return chatRoomResponseDTOs;
-    }
-
-    /*    public ChatRoomResponseDTO getChatMessage(ChatRequestDTO chatRequestDTO) {
-            ChatRoom chatRoom = this.chatRoomRepository.findByUserIdAndFriendIdOrFriendIdAndUserId(chatRequestDTO.getUserId(), chatRequestDTO.getFriendId(), chatRequestDTO.getUserId(), chatRequestDTO.getFriendId());
-            ChatRoomResponseDTO chatRoomDTO;
-            if (chatRoom != null) {
-                List<ChatRoomMessageResponseDTO> messageDTOs = this.chatMessageService.getChatMessages(chatRoom.getId()).stream()
-                        .map(IChatMapper.INSTANCE::chatMessageToDTO)
-                        .collect(Collectors.toList());
-                chatRoomDTO = ChatRoomResponseDTO.builder().messages(messageDTOs).userId(chatRequestDTO.getUserId()).friendId(chatRequestDTO.getFriendId()).friendEmail(chatRequestDTO.getFriendEmail()).id(chatRoom.getId()).build();
-                //chatRoomDTO = IChatMapper.INSTANCE.chatRoomToDTO(chatRoom, messageDTOs);
-            }
-            else {
-                chatRoomDTO = ChatRoomResponseDTO.builder().messages(null).userId(chatRequestDTO.getUserId()).friendEmail(chatRequestDTO.getFriendEmail()).friendId(chatRequestDTO.getFriendId()).id(null).build();
-
-
-            }
-            return chatRoomDTO;
-        }*/
     public ChatRoomWithUserChatSettingsDTO findByParticipantIds(String userId, String friendId) {
         List<String> ids = new ArrayList<>();
         ids.add(userId);
@@ -124,11 +88,6 @@ public class ChatRoomService {
 
     }
 
-//    public void sendMessage(MessageRequestDTO messageRequestDTO) {
-//            this.chatMessageService.sendMessage(messageRequestDTO);
-//    }
-
-
     public List<ChatRoom> getUserChatRooms(String userId) {
         return chatRoomRepository.findByParticipantIdsContaining(userId);
     }
@@ -141,22 +100,11 @@ public class ChatRoomService {
         return chatMessageService.getChatMessages(chatRoomId);
     }
 
-    public ChatMessage getChatLastMessage(String chatRoomId) {
-        return chatMessageService.getChatLastMessage(chatRoomId);
-    }
-
     public boolean isUserBlocked(String userId, String chatRoomId) {
         UserChatSettings settings = userChatSettingsService.findByUserIdAndChatRoomId(userId, chatRoomId);
         return settings != null && settings.isBlocked();
     }
 
-    //    public void processMessage(MessageRequestDTO messageRequestDTO) {
-//        boolean isSenderBlocked = isUserBlocked(messageRequestDTO.getSenderId(), messageRequestDTO.getChatRoomId());
-//        boolean isRecipientBlocked = isUserBlocked(messageRequestDTO.getRecipientId(), messageRequestDTO.getChatRoomId());
-//
-//        boolean isSuccess = !(isSenderBlocked || isRecipientBlocked);
-//        chatMessageService.sendMessage(messageRequestDTO, isSuccess);
-//    }
     public void processMessage(MessageRequestDTO messageRequestDTO) {
         boolean isSenderBlocked = isUserBlocked(messageRequestDTO.getSenderId(), messageRequestDTO.getChatRoomId());
         boolean isRecipientBlocked = isUserBlocked(messageRequestDTO.getRecipientId(), messageRequestDTO.getChatRoomId());
@@ -169,81 +117,105 @@ public class ChatRoomService {
         rabbitMQProducer.sendMessage(messageRequestDTO);
     }
 
-
-
-    public List<ChatRoomWithMessagesDTO> getUserChatRoomsAndMessages(String userId) {
-        List<ChatRoom> chatRooms = getUserChatRooms(userId);
-
-        return chatRooms.stream().map(chatRoom -> {
-            List<String> filteredParticipantIds = chatRoom.getParticipantIds()
-                    .stream()
-                    .filter(id -> !id.equals(userId))
-                    .toList();
-
-            String friendId = filteredParticipantIds.isEmpty() ? null : filteredParticipantIds.get(0);
-            List<ChatMessage> messages = getChatMessages(chatRoom.getId());
-            List<ChatRoomMessageResponseDTO> messageDTOs = messages.stream()
-                    .map(IChatMapper.INSTANCE::chatMessageToDTO)
-                    .collect(Collectors.toList());
-            UserChatSettings userChatSettings = userChatSettingsService.findByUserIdAndChatRoomId(userId, chatRoom.getId());
-
-            String friendEmail = friendId != null ? this.userManager.getUserEmailById(UUID.fromString(friendId)) : null;
-
-            return ChatRoomWithMessagesDTO.builder()
-                    .id(chatRoom.getId())
-                    .image(null)
-                    .messages(messageDTOs)
-                    .userChatSettings(userChatSettings)
-                    .friendEmail(friendEmail)
-                    .friendId(friendId)
-                    .userId(userId)
-                    .build();
-        }).collect(Collectors.toList());
-    }
-
     //    public List<ChatSummaryDTO> getUserChatSummariess(String userId) {
-//        List<ChatRoom> chatRooms = getUserChatRooms(userId);
+//        Map<String, UserChatSettings> userChatSettingsMap = userChatSettingsService.findUserChatSettingsByUserId(userId);
+//        List<String> chatRoomIds = extractChatRoomIdsUserChatSettingsMap(userChatSettingsMap);
+//        userChatSettingsMap.values().forEach(x -> System.out.println("X > " + x.getChatRoomId()));
+//        List<ChatRoom> chatRooms = getUserChatRoomsAndDeletedFalse(chatRoomIds);
+//        chatRooms.forEach(x -> System.out.println("------------------------------------------- > " + x.getId()));
 //        List<UUID> participantIds = extractParticipantIds(chatRooms, userId);
-//        List<String> chatRoomIds = extractChatRoomIds(chatRooms);
+//
 //
 //        Map<String, LastMessageInfo> lastMessageMap = chatMessageService.getLastMessagesForChatRooms(chatRoomIds);
-//        Map<String, UserChatSettings> userChatSettingsMap = userChatSettingsService.findUserChatSettingsByUserIdAndChatRoomIds(userId, chatRoomIds);
 //
-//        List<FeignClientUserProfileResponseDTO> profiles = getParticipantProfiles(userId,participantIds);
 //
-//        return chatRooms.stream()
-//                .map(chatRoom -> buildChatSummaryDTO(chatRoom, lastMessageMap, userChatSettingsMap, profiles, userId))
+//        Map<UUID, FeignClientUserProfileResponseDTO> profileResponseDTOMap = getParticipantProfiles(userId, participantIds).stream()
+//                .collect(Collectors.toMap(profile -> profile.getUserProfileResponseDTO().getId(), Function.identity()));
+//        System.out.println("############################################ > ");
+//        profileResponseDTOMap.values().forEach(x -> System.out.println("YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY > " + x.getUserProfileResponseDTO().getEmail()));
+//        List<ChatSummaryDTO> sortedChatSummaries = chatRooms.stream()
+//                .map(chatRoom -> buildChatSummary(chatRoom, lastMessageMap.get(chatRoom.getId()), userChatSettingsMap.get(chatRoom.getId()), userId, profileResponseDTOMap))
 //                .filter(Objects::nonNull)
-//                .toList();
+//                .sorted(Comparator.comparingInt(chatSummary -> extractNumericPart(chatSummary.getUserProfileResponseDTO().getEmail())))
+//                .collect(Collectors.toList());
+//
+//        // Sıralama sonrası email değerlerini yazdırarak doğrulama yapalım
+//        sortedChatSummaries.forEach(chatSummary ->
+//                System.out.println("Email: " + chatSummary.getUserProfileResponseDTO().getEmail())
+//        );
+//
+//        return sortedChatSummaries;
 //    }
-    public List<ChatSummaryDTO> getUserChatSummariess(String userId) {
-        Map<String, UserChatSettings> userChatSettingsMap = userChatSettingsService.findUserChatSettingsByUserId(userId);
-        List<String> chatRoomIds = extractChatRoomIdsUserChatSettingsMap(userChatSettingsMap);
-        userChatSettingsMap.values().forEach(x -> System.out.println("X > " + x.getChatRoomId()));
-        List<ChatRoom> chatRooms = getUserChatRoomsAndDeletedFalse(chatRoomIds);
-        chatRooms.forEach(x -> System.out.println("------------------------------------------- > " + x.getId()));
-        List<UUID> participantIds = extractParticipantIds(chatRooms, userId);
 
+    @Async("taskExecutor")
+    public CompletableFuture<List<FeignClientUserProfileResponseDTO>> getParticipantProfilesAsync(String userId, List<UUID> participantIds) {
+        ContactInformationOfExistingChatsRequestDTO request = ContactInformationOfExistingChatsRequestDTO.builder()
+                .userId(UUID.fromString(userId))
+                .userContactIds(participantIds)
+                .build();
+        System.out.println("WEB CLIENT > " + webClient.toString());
+        return webClient.post()
+                .uri("/get-contact-information-of-existing-chats")
+                .body(Mono.just(request), ContactInformationOfExistingChatsRequestDTO.class)
+                .retrieve()
+                .bodyToMono(new ParameterizedTypeReference<List<FeignClientUserProfileResponseDTO>>() {})
+                .onErrorResume(WebClientResponseException.class, ex -> {
+                    // Log error and return empty list in case of error
+                    System.err.println("Error fetching participant profiles: " + ex.getMessage());
+                    return Mono.just(Collections.emptyList());
+                })
+                .toFuture();
+    }
 
-        Map<String, LastMessageInfo> lastMessageMap = chatMessageService.getLastMessagesForChatRooms(chatRoomIds);
+    @Async("taskExecutor")
+    public CompletableFuture<List<ChatSummaryDTO>> getUserChatSummariesAsync(String userId) {
+        CompletableFuture<Map<String, UserChatSettings>> userChatSettingsFuture =
+                CompletableFuture.supplyAsync(() -> userChatSettingsService.findUserChatSettingsByUserId(userId));
 
+        CompletableFuture<List<String>> chatRoomIdsFuture = userChatSettingsFuture.thenApply(this::extractChatRoomIdsUserChatSettingsMap);
 
-        Map<UUID, FeignClientUserProfileResponseDTO> profileResponseDTOMap = getParticipantProfiles(userId, participantIds).stream()
-                .collect(Collectors.toMap(profile -> profile.getUserProfileResponseDTO().getId(), Function.identity()));
-        System.out.println("############################################ > ");
-        profileResponseDTOMap.values().forEach(x -> System.out.println("YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY > " + x.getUserProfileResponseDTO().getEmail()));
-        List<ChatSummaryDTO> sortedChatSummaries = chatRooms.stream()
-                .map(chatRoom -> buildChatSummary(chatRoom, lastMessageMap.get(chatRoom.getId()), userChatSettingsMap.get(chatRoom.getId()), userId, profileResponseDTOMap))
-                .filter(Objects::nonNull)
-                .sorted(Comparator.comparingInt(chatSummary -> extractNumericPart(chatSummary.getUserProfileResponseDTO().getEmail())))
-                .collect(Collectors.toList());
+        CompletableFuture<List<ChatRoom>> chatRoomsFuture = chatRoomIdsFuture.thenApply(this::getUserChatRoomsAndDeletedFalse);
 
-        // Sıralama sonrası email değerlerini yazdırarak doğrulama yapalım
-        sortedChatSummaries.forEach(chatSummary ->
-                System.out.println("Email: " + chatSummary.getUserProfileResponseDTO().getEmail())
-        );
+        CompletableFuture<Map<String, LastMessageInfo>> lastMessagesFuture = chatRoomIdsFuture.thenApply(chatMessageService::getLastMessagesForChatRooms);
 
-        return sortedChatSummaries;
+        CompletableFuture<Map<UUID, FeignClientUserProfileResponseDTO>> profilesFuture = chatRoomsFuture.thenComposeAsync(chatRooms -> {
+            List<UUID> participantIds = extractParticipantIds(chatRooms, userId);
+            return getParticipantProfilesAsync(userId, participantIds).thenApply(profiles ->
+                    profiles.stream().collect(Collectors.toMap(
+                            profile -> profile.getUserProfileResponseDTO().getId(),
+                            Function.identity()
+                    ))
+            );
+        });
+
+        return CompletableFuture.allOf(userChatSettingsFuture, lastMessagesFuture, profilesFuture)
+                .thenCompose(v -> {
+                    try {
+                        Map<String, UserChatSettings> userChatSettings = userChatSettingsFuture.get();
+                        Map<String, LastMessageInfo> lastMessages = lastMessagesFuture.get();
+                        Map<UUID, FeignClientUserProfileResponseDTO> profiles = profilesFuture.get();
+                        List<ChatRoom> chatRooms = chatRoomsFuture.get();
+
+                        List<ChatSummaryDTO> chatSummaries = chatRooms.stream()
+                                .map(chatRoom -> buildChatSummary(
+                                        chatRoom,
+                                        lastMessages.get(chatRoom.getId()),
+                                        userChatSettings.get(chatRoom.getId()),
+                                        userId,
+                                        profiles
+                                ))
+                                .filter(Objects::nonNull)
+                                .sorted(Comparator.comparingInt(chatSummary ->
+                                        extractNumericPart(chatSummary.getUserProfileResponseDTO().getEmail())))
+                                .collect(Collectors.toList());
+
+                        return CompletableFuture.completedFuture(chatSummaries);
+                    } catch (Exception e) {
+                        CompletableFuture<List<ChatSummaryDTO>> failedFuture = new CompletableFuture<>();
+                        failedFuture.completeExceptionally(new RuntimeException("Error fetching chat summaries", e));
+                        return failedFuture;
+                    }
+                });
     }
 
     private int extractNumericPart(String email) {
@@ -318,11 +290,6 @@ public class ChatRoomService {
                 .toList();
     }
 
-    private List<String> extractChatRoomIds(List<ChatRoom> chatRooms) {
-        return chatRooms.stream()
-                .map(ChatRoom::getId)
-                .toList();
-    }
 
     private List<String> extractChatRoomIdsUserChatSettingsMap(Map<String, UserChatSettings> userChatSettingsMap) {
         return userChatSettingsMap.values().stream()
@@ -330,56 +297,10 @@ public class ChatRoomService {
                 .toList();
     }
 
-    private List<FeignClientUserProfileResponseDTO> getParticipantProfiles(String userId, List<UUID> participantIds) {
-        ContactInformationOfExistingChatsRequestDTO request = ContactInformationOfExistingChatsRequestDTO.builder()
-                .userId(UUID.fromString(userId))
-                .userContactIds(participantIds)
-                .build();
-        return contactsManager.getContactInformationOfExistingChats(request);
-    }
-
-
     private UserChatSettingsDTO mapUserChatSettingsDTO(UserChatSettings settings) {
         if (settings == null) return null;
         return IChatMapper.INSTANCE.userChatSettingsToDTO(settings);
     }
-
-    /**
-     * CommandLineRunner açılırsa açılacak
-     * public List<ChatSummaryDTO> getUserChatSummariess(String userId) {
-     * List<ChatRoom> chatRooms = getUserChatRooms(userId);
-     * <p>
-     * return chatRooms.stream().map(chatRoom -> {
-     * List<String> filteredParticipantIds = chatRoom.getParticipantIds()
-     * .stream()
-     * .filter(id -> !id.equals(userId))
-     * .toList();
-     * <p>
-     * String friendId = filteredParticipantIds.isEmpty() ? null : filteredParticipantIds.get(0);
-     * ChatMessage chatMessage = getChatLastMessage(chatRoom.getId());
-     * <p>
-     * // Null kontrolü
-     * String lastMessageContent = chatMessage != null ? chatMessage.getMessageContent() : "No message available";
-     * Instant lastMessageTime = chatMessage != null ? chatMessage.getFullDateTime() : Instant.now();
-     * <p>
-     * UserChatSettings userChatSettings = userChatSettingsService.findByUserIdAndChatRoomId(userId, chatRoom.getId());
-     * UserChatSettingsDTO userChatSettingsDTO = IChatMapper.INSTANCE.userChatSettingsToDTO(userChatSettings);
-     * String friendEmail = friendId != null ? this.userManager.getUserEmailById(UUID.fromString(friendId)) : null;
-     * <p>
-     * return ChatSummaryDTO.builder()
-     * .id(chatRoom.getId())
-     * .image(null)
-     * .lastMessage(lastMessageContent)
-     * .lastMessageTime(lastMessageTime)
-     * .userChatSettings(userChatSettingsDTO)
-     * .friendEmail(friendEmail)
-     * .friendId(friendId)
-     * .userId(userId)
-     * .build();
-     * }).collect(Collectors.toList());
-     * }
-     */
-
 
     public MessagesDTO getLast30Messages(String chatRoomId, int limit, String userId) {
         Pageable pageable = PageRequest.of(0, limit, Sort.by(Sort.Direction.DESC, "fullDateTime"));
@@ -455,58 +376,6 @@ public class ChatRoomService {
     public void readMessage(UnreadMessageCountDTO unreadMessageCountDTO) {
         rabbitMQProducer.readMessage(unreadMessageCountDTO);
     }
-
-//    public void createChatRoomAndFristMessage(CreateChatRoomDTO createChatRoomDTO) {
-//        ChatRoom chatRoom = chatRoomSave(createChatRoomDTO.getUserId(), createChatRoomDTO.getFriendId());
-//        boolean isSenderBlocked = isUserBlocked(createChatRoomDTO.getUserId(), chatRoom.getId());
-//        boolean isRecipientBlocked = isUserBlocked(createChatRoomDTO.getFriendId(), chatRoom.getId());
-//
-//        boolean isSuccess = !(isSenderBlocked || isRecipientBlocked);
-//        String destination = isSuccess ? "queue/received-message" : "/queue/error";
-//        ChatMessage chatMessage = this.chatMessageService.sendFirstMessage(createChatRoomDTO, chatRoom.getId());
-//        UserChatSettings userChatSettings = userChatSettingsService.findByUserIdAndChatRoomId(createChatRoomDTO.getUserId(), chatRoom.getId());
-//        UserChatSettings friendChatSettings = userChatSettingsService.findByUserIdAndChatRoomId(createChatRoomDTO.getFriendId(), chatRoom.getId());
-//        if(userChatSettings == null) {
-//            userChatSettings = this.userChatSettingsService.saveUserChatSettings(chatRoom.getId(),createChatRoomDTO.getUserId());
-//        }
-//        if(friendChatSettings == null) {
-//            friendChatSettings = this.userChatSettingsService.saveUserChatSettings(chatRoom.getId(),createChatRoomDTO.getFriendId());
-//
-//        }
-//
-//        ChatSummaryDTO userChatSumamryDTO = ChatSummaryDTO.builder()
-//                .id(chatRoom.getId())
-//                .image(null)
-//                .lastMessage(chatMessage.getMessageContent())
-//                .lastMessageTime(chatMessage.getFullDateTime())
-//                .messages(null)
-//                .userChatSettings(userChatSettings)
-//                .friendEmail(createChatRoomDTO.getFriendEmail())
-//                .friendId(createChatRoomDTO.getFriendId())
-//                .userId(createChatRoomDTO.getUserId())
-//                .build();
-//        messagingTemplate.convertAndSendToUser(
-//                isSuccess ? createChatRoomDTO.getFriendId() : createChatRoomDTO.getUserId(),
-//                destination,
-//                userChatSumamryDTO);
-//        String userEmail = createChatRoomDTO.getUserId() != null ? this.userManager.getUserEmailById(UUID.fromString(createChatRoomDTO.getUserId())) : null;
-//
-//        ChatSummaryDTO friendChatSummaryDTO = ChatSummaryDTO.builder()
-//                .id(chatRoom.getId())
-//                .image(null)
-//                .lastMessage(chatMessage.getMessageContent())
-//                .lastMessageTime(chatMessage.getFullDateTime())
-//                .messages(null)
-//                .userChatSettings(friendChatSettings)
-//                .friendEmail(userEmail)
-//                .friendId(createChatRoomDTO.getUserId())
-//                .userId(createChatRoomDTO.getFriendId())
-//                .build();
-//        messagingTemplate.convertAndSendToUser(
-//                createChatRoomDTO.getUserId(),
-//                destination,
-//                friendChatSummaryDTO);
-//    }
 
 
 }
